breaking markup into wp theme

--- a/wp-content/themes/intrepid/style.scss
+++ b/wp-content/themes/intrepid/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: WB - Heymama
-Theme URI: https://heymama.co
+Theme Name: Intrepid
+Theme URI: https://www.intrepidpowerboats.com/
 Author: Eleven11 Group
 Author URI: http://eleven11group.com
-Description: Base theme for Heymama.
+Description: Base theme for Intrepid Power Boats.
 Version:      99.0.0
 */
 
