--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -66,22 +66,24 @@
         @media #{$phone} {
             @include fsz(9px);
         }
-        &.active{
+        &.step__item--active{
             color: $dark-gray;
-        }
-        &.active:before{
-            content: "";
-            display: block;
-            width: 100%;
-            height: 2px;
-            background-color: $dark-gray;
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            @media #{$phone} {
-                bottom: -1px;
+
+            &:before{
+                content: "";
+                display: block;
+                width: 100%;
+                height: 2px;
+                background-color: $dark-gray;
+                position: absolute;
+                bottom: -2px;
+                left: 0;
+                @media #{$phone} {
+                    bottom: -1px;
+                }
             }
         }
+
         &:last-child{
             margin-right: 0;
         }
@@ -98,25 +100,7 @@
         display: table;
         clear: both;
     }
-    .step-next,
-    .step-prev{
-        letter-spacing: 2.6px;
-        @include fsz(11px);
-        font-weight: 800;
-        text-transform: uppercase;
-        color:#3a4249;
-        &:hover{
-            color:$primary-color;
-        }
-    }
-    .step-prev{
-        float: left;
-        margin-left:30px;
-    }
-    .step-next{
-        float: right;
-        margin-right:30px;
-    }
+
     &.step-nagivation--alt{
       padding: 9px 0 10px;
       display: flex;
@@ -152,6 +136,34 @@
         @media #{$phone} {
             text-align: center;
         }
+    }
+}
+
+.step-next,
+.step-prev{
+    letter-spacing: 2.6px;
+    @include fsz(11px);
+    font-weight: 800;
+    text-transform: uppercase;
+    color:#3a4249;
+    &:hover{
+        color:$primary-color;
+    }
+}
+.step-prev{
+    float: left;
+    margin-left:30px;
+
+    .build-a-boat--start & {
+        display: none;
+    }
+}
+.step-next{
+    float: right;
+    margin-right:30px;
+
+    .build-a-boat--end & {
+        display: none;
     }
 }
 
