--- a/wp-content/themes/intrepid/css/partials/build-a-boat.scss
+++ b/wp-content/themes/intrepid/css/partials/build-a-boat.scss
@@ -11,6 +11,10 @@
     background-color: #fff;
     transition: visibility 0s linear 300ms, opacity 300ms;
 
+    @media #{$header} {
+        top: 71px;
+    }
+
     .build-a-boat--active & {
         visibility: visible;
         opacity: 1;
@@ -23,5 +27,42 @@
 
     &.step__item--active {
         display: block;
+    }
+}
+
+.jQWCP-wWidget {
+
+    &.jQWCP-block {
+        display: block;
+        width: auto;
+        height: auto;
+        border-radius: 0;
+        padding: 0;
+        border: 0;
+        background: none;
+        box-shadow: none;
+    }
+
+    .jQWCP-wWheel {
+        width: 180px !important;
+        height: 180px !important;
+        margin: 20px 0;
+        float: none;
+
+        &:before {
+            content: 'Color Selection';
+            display: block;
+            text-align: center;
+            position: absolute;
+            top: -20px;
+            left: 0;
+            width: 100%;
+            text-transform: uppercase;
+            @include fsz(9px);
+            letter-spacing: 2px;
+            font-weight: 700;
+            color: $dark-gray;
+            pointer-events: none;
+        }
     }
 }
