--- a/wp-content/themes/intrepid/css/templates/build-boat.scss
+++ b/wp-content/themes/intrepid/css/templates/build-boat.scss
@@ -424,6 +424,7 @@
 .motor-color{
     padding-top: 25px;
     .motor-color__item{
+        cursor: pointer;
         margin-bottom: 15px;
         &--white{
             .motor-color__box{
@@ -580,6 +581,7 @@
         width: 48%;
         position: relative;
         padding-right: 15px;
+        cursor: pointer;
         @media #{$phone} {
             text-align: center;
             margin-bottom: 11px;
