--- a/wp-content/themes/intrepid/css/templates/model.scss
+++ b/wp-content/themes/intrepid/css/templates/model.scss
@@ -144,6 +144,10 @@
   @media #{$phone-small} {
     font-size: 18px;
   }
+
+    a {
+        color: $dark-gray;
+    }
 }
 
 .motor-list__trigger,
@@ -204,8 +208,8 @@
     width: 100%;
   }
 }
-.gutter-sizer { 
-  width: 2.5%; 
+.gutter-sizer {
+  width: 2.5%;
   @media screen and (max-width: 1000px) {
     width: 3%;
   }
@@ -322,9 +326,26 @@
   justify-content: center;
 
   .btn {
+      display: block;
+      width: 100%;
     color: #FFFFFF;
-    margin-bottom: 4px;
+    margin-bottom: 16px;
+
+      &:hover,
+      &:active,
+      &:focus {
+          background-color: $white;
+          border-color: $white;
+          color: $dark-gray;
+      }
   }
+
+    .model-list-cta__link {
+        color: #ffffff;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.2;
+    }
 }
 
 .select2-dropdown {
@@ -466,7 +487,7 @@
     padding-right: 100px;
     .btn--dark{
       @media #{$phone} {
-        padding: 22px 25px; 
+        padding: 22px 25px;
         width:100%;
       }
     }
