--- a/wp-content/themes/intrepid/css/partials/_hero.scss
+++ b/wp-content/themes/intrepid/css/partials/_hero.scss
@@ -87,6 +87,9 @@
         padding-left: 5px;
       }
     }
+    &--no-line:before{
+      display: none;
+    }
   }
   .play-btn{
     position: absolute;
@@ -174,7 +177,7 @@
       text-align: center;
     }
     &:before{
-      background-color: #979797;
+      background-color: $dusty-gray;
       height: 184%;
       width: 1px;
       top: -45%;
@@ -196,6 +199,159 @@
     text-transform: uppercase;
     @media #{$phone} {
       display: none;
+    }
+  }
+}
+.hero__mobile-image{
+  display: none;
+  @media #{$phone} {
+    display: block;
+  }
+}
+.hero--inner-large{
+   padding: 67px 0;
+   height: 460px;
+   min-height: 460px;
+   position: relative;
+   @media #{$phone} {
+     background: none !important;
+     padding: 0;
+     height: auto;
+     min-height: auto;
+   }
+   &:before{
+     content:"";
+     display: block;
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top:0;
+     left:0;
+     background: -moz-linear-gradient(45deg, rgba(58,66,73,1) 0%, rgba(52,59,66,1) 10%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+     background: -webkit-linear-gradient(45deg, rgba(58,66,73,1) 0%,rgba(52,59,66,1) 10%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+     background: linear-gradient(45deg, rgba(58,66,73,1) 0%,rgba(52,59,66,1) 10%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a4249', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+     @media #{$phone} {
+       display: none;
+     }
+   }
+   .container{
+     align-items: flex-end;
+     @media #{$phone} {
+       padding:0;
+       display: block;
+     }
+   }
+   .hero-post{
+     flex-direction: column;
+     align-items: flex-start;
+     max-width: 680px;
+     color:$white;
+     @media #{$phone} {
+       background-color: $bright-gray;
+       max-width: 100%;
+       padding:38px 10px 50px;
+       text-align: center;
+     }
+     .btn{
+       @media #{$phone} {
+         background-color: transparent;
+         border: 1px solid;
+         padding: 16px 27px;
+         color: $white;
+       }
+     }
+   }
+   .hero-post__title{
+     @include fsz(35px);
+     text-transform: uppercase;
+     margin-bottom: 0;
+     @media #{$phone} {
+       @include fsz(22px);
+       margin-bottom: 3px;
+     }
+   }
+   .hero-post__meta{
+     display: block;
+     font-weight: 700;
+     text-transform: uppercase;
+     letter-spacing: 2.4px;
+     @include fsz(10px);
+     text-indent: 1px;
+     border-bottom: 1px solid #747474;
+     padding-bottom: 8px;
+     color:$white;
+     max-width: 340px;
+     margin-bottom: 10px;
+     @media #{$phone} {
+       margin: 0 auto 20px;
+       color:$silver;
+       padding-bottom: 15px;
+     }
+   }
+   .hero-post__description{
+     margin-bottom: 30px;
+     @media #{$phone} {
+       @include fsz(14px);
+     }
+   }
+ }
+
+.hero--news-single{
+  padding: 30px 0;
+  height: 460px;
+  min-height: 460px;
+  position: relative;
+  @media #{$phone} {
+    background: none !important;
+    padding: 0;
+    height: auto;
+    min-height: auto;
+  }
+  &:before{
+    content:"";
+    display: block;
+    width: 100%;
+    height: 160px;
+    position: absolute;
+    bottom:0;
+    left:0;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(31,34,37,0.94) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(31,34,37,0.94) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(31,34,37,0.94) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f51f2225',GradientType=0 ); /* IE6-9 */
+    @media #{$phone} {
+      height: 100px;
+    }
+  }
+  .arrow-link{
+    position: absolute;
+    bottom: 28px;
+    left: 33px;
+    @include fsz(11px);
+    text-transform: uppercase;
+    letter-spacing: 2.6px;
+    color:#CFCFCF;
+    font-weight: 700;
+    @media #{$phone} {
+      @include fsz(10px);
+      bottom: 12px;
+      left: 15px;
+    }
+    &:hover{
+      color: $white;
+    }
+    svg{
+      transform: rotate(-90deg);
+      width: 13px;
+      height: 13px;
+      margin-top: -1px;
+      margin-right: 3px;
+      @media #{$phone} {
+        width: 11px;
+        height: 11px;
+        margin-right: 6px;
+      }
     }
   }
 }
