--- a/wp-content/themes/intrepid/css/templates/home.scss
+++ b/wp-content/themes/intrepid/css/templates/home.scss
@@ -22,7 +22,7 @@
     padding:48px 70px;
     max-width: 600px;
     @include fsz(15px);
-    color: #B0B0B0;
+    color: $silver;
     text-transform: uppercase;
     letter-spacing: 3.5px;
     text-align: center;
