--- a/wp-content/themes/intrepid/css/global/_config.scss
+++ b/wp-content/themes/intrepid/css/global/_config.scss
@@ -9,7 +9,10 @@ $black: #000000;
 $white: #FFFFFF;
 $primary-color:#8A0808;
 $dark-gray: #1f2225;
+$bright-gray: #3A4249;
 $gray: #949596;
+$dusty-gray: #979797;
+$silver : #B0B0B0;
 
 // Fonts
 $primary-family: 'Montserrat', sans-serif;
