--- a/wp-content/themes/intrepid/css/partials/_footer.scss
+++ b/wp-content/themes/intrepid/css/partials/_footer.scss
@@ -98,7 +98,7 @@
     }
     @media #{$phone-small} {
       padding: 18px 50px;
-      background-color: #3a4249;
+      background-color: $bright-gray;
       margin-bottom: 10px;
       position: relative;
     }
@@ -176,6 +176,26 @@
     }
     @media #{$phone-small} {
       display: block;
+    }
+  }
+  .sidebar &{
+    @media #{$header} {
+      display: none;
+    }
+  }
+  &--dark{
+    margin-bottom: 40px;
+    width: 100%;
+    .social-links{
+      justify-content: flex-start;
+      a{
+        color:$white;
+        background: #3A4249; /* Old browsers */
+        background: -moz-linear-gradient(top, rgba(58,66,73,1) 0%, rgba(31,34,37,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(58,66,73,1) 0%,rgba(31,34,37,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(58,66,73,1) 0%,rgba(31,34,37,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3A4249', endColorstr='#1F2225',GradientType=0 ); /* IE6-9 */
+      }
     }
   }
 }
