--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -3,7 +3,7 @@
     background: -moz-linear-gradient(top,  rgba(31,34,37,1) 0%, rgba(58,66,73,1) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top,  rgba(31,34,37,1) 0%,rgba(58,66,73,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(31,34,37,1) 0%,rgba(58,66,73,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f2225', endColorstr='#3a4249',GradientType=0 ); /* IE6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f2225', endColorstr='$bright-gray',GradientType=0 ); /* IE6-9 */
     position: relative;
     @media #{$header} {
         background: $dark-gray;
@@ -67,7 +67,7 @@
             background: -moz-linear-gradient(top,  rgba(31,34,37,1) 0%, rgba(58,66,73,1) 100%); /* FF3.6-15 */
             background: -webkit-linear-gradient(top,  rgba(31,34,37,1) 0%,rgba(58,66,73,1) 100%); /* Chrome10-25,Safari5.1-6 */
             background: linear-gradient(to bottom,  rgba(31,34,37,1) 0%,rgba(58,66,73,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f2225', endColorstr='#3a4249',GradientType=0 ); /* IE6-9 */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1f2225', endColorstr='$bright-gray',GradientType=0 ); /* IE6-9 */
         }
         .icon-close{
             vertical-align: middle;
@@ -155,7 +155,7 @@
     .overview-block__title{
         text-transform: uppercase;
         font-weight: 400;
-        border-bottom: 1px solid #979797;
+        border-bottom: 1px solid $dusty-gray;
         padding-bottom: 28px;
         margin-bottom: 30px;
     }
@@ -233,7 +233,7 @@
     font-weight: 700;
     letter-spacing: 3.6px;
     @include fsz(15px);
-    color:#B0B0B0;
+    color:$silver;
     display: block;
     margin-bottom: 15px;
 }
@@ -329,7 +329,7 @@
         letter-spacing: 3.6px;
         @include fsz(15px);
         padding-bottom: 18px;
-        border-bottom: 1px solid #979797;
+        border-bottom: 1px solid $dusty-gray;
         margin-bottom: 18px;
         @media #{$phone} {
             text-align: center;
@@ -510,7 +510,7 @@
             }
         }
         .option-title{
-            color:#B0B0B0;
+            color:$silver;
             @media #{$phone} {
                 display: inline-block;
                 border: none;
@@ -557,7 +557,7 @@
         display: none;
         padding: 21px 10px;
         background-color: #f4f4f4;
-        color: #3a4249;
+        color: $bright-gray;
         font-size: .625rem;
         text-align: center;
         letter-spacing: 2.9px;
@@ -598,7 +598,7 @@
 .option-title{
     letter-spacing: 2.6px;
     @include fsz(11px);
-    color:#3a4249;
+    color:$bright-gray;
     text-transform: uppercase;
     border-bottom: 1px solid rgba(31, 34, 37, 0.26);
     padding-bottom: 8px;
@@ -607,7 +607,7 @@
         margin-bottom: 13px;
     }
     &.option-title--featured{
-        color:#3a4249;
+        color:$bright-gray;
         position: relative;
         padding-left: 30px;
         @media #{$phone} {
@@ -650,22 +650,39 @@
         margin: 0 auto;
         width: 200px;
     }
+    .slick-arrow{
+        position: absolute;
+        bottom: -48px;
+        margin-top: -9px;
+        width: 40px;
+        height: 40px;
+        font-size: 0;
+        top: auto;
+    }
+    .slick-prev{
+        background:url(images/slider-arrow-left.svg) no-repeat 0 0;
+        left: calc(50% - 146px);
+    }
+    .slick-next{
+        background:url(images/slider-arrow-right.svg) no-repeat 0 0;
+        right: calc(50% - 146px);
+    }
 }
 .slick-arrow{
     position: absolute;
-    bottom: -48px;
-    margin-top: -9px;
+    top: calc(50% - 20px);
     width: 40px;
     height: 40px;
     font-size: 0;
 }
 .slick-prev{
     background:url(images/slider-arrow-left.svg) no-repeat 0 0;
-    left: calc(50% - 146px);
+    left: 0;
+    z-index: 1;
 }
 .slick-next{
     background:url(images/slider-arrow-right.svg) no-repeat 0 0;
-    right: calc(50% - 146px);
+    right: 0;
 }
 
 .slick-dots{
@@ -761,7 +778,7 @@
           }
         }
         &.selected {
-            background-color: #3a4249;
+            background-color: $bright-gray;
             color: $white;
             font-weight: 700;
               &:after {
@@ -782,7 +799,7 @@
     @include fsz(11px);
     text-transform: uppercase;
     text-align: left;
-    color:#B0B0B0;
+    color:$silver;
     border-bottom:1px solid rgba(31,34, 37, 0.26);
     padding-bottom: 9px;
     margin-bottom: 8px;
@@ -821,6 +838,19 @@
     text-align: left;
     margin-bottom: 10px;
     position: relative;
+    &.form__field--captcha,
+    &.form__field--submit{
+        @media #{$phone} {
+            text-align: center;
+        }
+    }
+    &.form__field--captcha{
+        img{
+            @media #{$phone} {
+               display: inline-block;
+            }
+        }
+    }
     .button{
         background-color: $dark-gray;
         border: 1px solid $dark-gray;
@@ -829,12 +859,13 @@
         @media #{$phone} {
             padding:17px 45px;
         }
-
-        &:hover,
-        &:active,
-        &:focus {
-            background-color: $white;
-            color:$dark-gray;
+    }
+    .button--small{
+        background-color: $dark-gray;
+        color:$white;
+        padding:12px 15px;
+        @media #{$phone} {
+            padding:22px 25px;
         }
     }
 }
@@ -875,7 +906,7 @@
 
 .deck-block__info {
     padding: 25px 0 38px;
-    background-color: #3a4249;
+    background-color: $bright-gray;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -933,7 +964,7 @@
         width: 67px;
         height: 67px;
         background-color: $white;
-        color:#3A4249;
+        color:$bright-gray;
         font-weight: 700;
         @include fsz(38px);
         text-align: center;
@@ -984,7 +1015,7 @@
         margin-bottom: 20px;
         color:$white;
         img{
-            border:1px solid #979797;
+            border:1px solid $dusty-gray;
             @media #{$phone} {
               width: 100%;
             }
@@ -1082,6 +1113,13 @@
         margin: 0 auto;
         width: 24px;
         height: 25px;
+    }
+    &--small{
+        font-size: 11px;
+        svg{
+            width: 18px;
+            height: 18px;
+        }
     }
 }
 
