--- a/wp-content/themes/intrepid/css/templates/news.scss
+++ b/wp-content/themes/intrepid/css/templates/news.scss
@@ -118,6 +118,10 @@
       @include fsz(20px);
       margin-bottom: 5px;
     }
+
+      a {
+          color: $bright-gray;
+      }
   }
   .post__meta{
     display: block;
