owners portal forum side

--- a/wp-content/themes/intrepid/css/global/buttons.scss
+++ b/wp-content/themes/intrepid/css/global/buttons.scss
@@ -33,6 +33,7 @@ button[type="submit"] {
     color:$white;
   }
 
+    .portal-login &,
     .bbpress-wrapper & {
         border-color: $dark-gray;
     }
