--- a/wp-content/themes/intrepid/css/partials/portal.scss
+++ b/wp-content/themes/intrepid/css/partials/portal.scss
@@ -4,6 +4,10 @@
     @media #{$phone} {
         min-height: 0;
     }
+
+    .nav-block {
+        margin-bottom: 40px;
+    }
 }
 
 .portal-login {
