--- a/wp-content/themes/intrepid/css/templates/model-single.scss
+++ b/wp-content/themes/intrepid/css/templates/model-single.scss
@@ -127,8 +127,15 @@
         &:hover{
             background-color: $white !important;
             color: $dark-gray;
+
+            a {
+                color: $dark-gray;
+            }
         }
 
+        a {
+            color:$white;
+        }
     }
 }
 
