services and about updates

--- a/wp-content/themes/intrepid/css/templates/service.scss
+++ b/wp-content/themes/intrepid/css/templates/service.scss
@@ -92,3 +92,10 @@
         width: 100%;
     }
 }
+
+.customer-support__location {
+
+    @media #{$phone} {
+        margin-bottom: 76px;
+    }
+}
